Get angular and angular-material hooked up

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title></title>
+
+    <!-- Dependencies -->
+    <script type="text/javascript" src="/angular/angular.js"></script>
+    <script type="text/javascript" src="/angular-animate/angular-animate.js"></script>
+    <script type="text/javascript" src="/angular-aria/angular-aria.js"></script>
+    <script type="text/javascript" src="/angular-messages/angular-messages.js"></script>
+    <script type="text/javascript" src="/angular-material/angular-material.js"></script>
+
+    <!-- Angular app stuff -->
+    <script type="text/javascript" src="/javascripts/angular-app.js"></script>
+
+
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <div ui-view></div>
   </body>
 </html>
