Reroute all routes to index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html ng-app="portfolio">
   <head>
     <title></title>
-
+    <link rel="shortcut icon" href="">
     <!-- Dependencies -->
     <script type="text/javascript" src="/angular/angular.js"></script>
     <script type="text/javascript" src="/angular-animate/angular-animate.js"></script>
