Slow start on nav

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,8 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet' href='/angular-material/angular-material.css' />
     <link rel="stylesheet" href="/ng-alertify/dist/ng-alertify.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <!-- Dependencies -->
     <script type="text/javascript" src="/angular/angular.js"></script>
     <script type="text/javascript" src="/angular-animate/angular-animate.js"></script>
