--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,6 +6,9 @@ body {
 a {
   color: #00B7FF; }
 
+.font_1_75 {
+  font-size: 1.75em; }
+
 .big_gutter {
   min-width: 75% !important;
   max-width: 75% !important;
