Created select for category and passing it to controller

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -18,4 +18,11 @@ a {
   margin-left: auto !important;
   margin-right: auto !important; }
 
+.width_50 {
+  width: 50% !important; }
+
+.center {
+  margin: auto;
+  padding: 10px; }
+
 /*# sourceMappingURL=style.css.map */
