--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -19,3 +19,10 @@ a
   	margin-left: auto !important;
   	margin-right: auto !important;
   
+
+.width_50
+    width: 50% !important;
+
+.center
+    margin: auto;
+    padding: 10px;
