Breaks not working

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,6 +21,7 @@
     <!-- Angular app stuff -->
     
     <script type="text/javascript" src="/javascripts/angular-app.js"></script>
+    <script type="text/javascript" src="/javascripts/angular-controllers/nav-controller.js"></script>
     <script type="text/javascript" src="/javascripts/angular-controllers/static-controller.js"></script>
     <script type="text/javascript" src="/javascripts/angular-controllers/admin-controller.js"></script>
 
