--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
     <title></title>
     <link rel="shortcut icon" href="">
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/stylesheets/media.css' />
     <link rel='stylesheet' href='/angular-material/angular-material.css' />
     <link rel="stylesheet" href="/ng-alertify/dist/ng-alertify.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
