--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="portfolio">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
     <link rel="shortcut icon" href="">
     <link rel='stylesheet' href='/stylesheets/style.css' />
