--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,16 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background-color: #FFF; }
+  background-color: #FFF; 
+}
 
 a {
-  color: #00B7FF; }
+  color: #00B7FF; 
+}
+
+.background_white{
+    background-color: #FFF !important;
+}
 
 .center_text {
   text-align: center !important; }
@@ -16,24 +22,36 @@ a {
   min-width: 75% !important;
   max-width: 75% !important;
   margin-left: auto !important;
-  margin-right: auto !important; }
+  margin-right: auto !important; 
+}
+
+.heigth_100{
+    height: 100% !important;
+    min-height: 100% !important;\
+}
 
 .width_50 {
-  width: 50% !important; }
+  width: 50% !important; 
+}
 
 .center {
   margin: auto;
-  padding: 10px; }
+  padding: 10px; 
+}
+
+.marging_b_15{
+    margin-bottom: 15px !important;
+}
 
 
-  @media ( min-width: 600px ) {
+@media ( min-width: 600px ) {
     .show_on_small{
-      display: none !important;
+        display: none !important;
     }
-  }
+}
 
-  @media ( max-width: 600px ) {
+@media ( max-width: 600px ) {
     .show_on_small{
-      display: initial !important;
+        display: initial !important;
     }
-  }
+}
