--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -58,6 +58,6 @@ a {
 
 
 .profile_thumbs{
-    max-height: 100% !important;
-    max-width: 100% !important;
+    /*height: 100% !important;*/
+    width: 100% !important;
 }
