--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -25,6 +25,14 @@ a {
   margin-right: auto !important; 
 }
 
+
+.cred_gutter {
+  min-width: 50% !important;
+  max-width: 50% !important;
+  margin-left: auto !important;
+  margin-right: auto !important; 
+}
+
 .heigth_100{
     height: 100% !important;
     min-height: 100% !important;\
