--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -75,18 +75,19 @@ a {
     /*width: 100% !important;*/
 }
 
-md-grid-list {
-  display: flex !important;
-  flex-wrap: wrap;
+.landscape{
+  object-fit: cover;
+  width: 100%;
+  height: 250px;
+  /*margin-left: 1px;*/
 }
 
-md-grid-tile {
-  /*border: solid 1px #000;*/
-  /*background: #ccc;*/
-  position: relative !important;
-  left: auto !important;
-  right: auto !important;
-  /*width: calc(((33.3333% - 1.33333px) * 1) - 1px) !important;*/
-  top: auto !important;
-  margin: 1px !important;
+.portrait{
+  object-fit: cover;
+  width: 250px;
+  height: 100%;
+}
+
+.margin_auto{
+  margin:auto;
 }
