--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
     <script type="text/javascript" src="/angular-aria/angular-aria.js"></script>
     <script type="text/javascript" src="/angular-messages/angular-messages.js"></script>
     <script type="text/javascript" src="/angular-material/angular-material.js"></script>
-    <script type="text/javascript" src="/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script type="text/javascript" src="/@uirouter/angularjs/release/angular-ui-router.min.js"></script>
     <script type="text/javascript" src="/ng-alertify/dist/ng-alertify.js"></script>
 
 
