add loading bar

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
     <link rel='stylesheet' href='/stylesheets/media.css' />
     <link rel='stylesheet' href='/angular-material/angular-material.css' />
     <link rel="stylesheet" href="/ng-alertify/dist/ng-alertify.css">
-    <link rel="stylesheet" href="/angular-loading-bar/src/loading-bar.css">
+    <link rel="stylesheet" href="/angular-loading-bar/build/loading-bar.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     <!-- Dependencies -->
@@ -19,7 +19,7 @@
     <script type="text/javascript" src="/angular-material/angular-material.js"></script>
     <script type="text/javascript" src="/@uirouter/angularjs/release/angular-ui-router.min.js"></script>
     <script type="text/javascript" src="/ng-alertify/dist/ng-alertify.js"></script>
-    <script type="text/javascript" src="/angular-loading-bar/src/loading-bar.js"></script>
+    <script type="text/javascript" src="/angular-loading-bar/build/loading-bar.min.js"></script>
 
 
     <!-- Angular app stuff -->
