--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -78,18 +78,54 @@ a {
 .landscape{
   object-fit: cover;
   width: 100%;
-  height: 250px;
+  /*height: 250px;*/
   /*margin-left: 1px;*/
+}
+
+@media( min-width: 600px ) {
+  .landscape{
+    height: 100px;
+  }
+}
+
+@media( min-width: 800px ) {
+  .landscape{
+    height: 150px;
+  }
+}
+
+@media( min-width: 900px ) {
+  .landscape{
+    height: 175px;
+  }
+}
+
+@media( min-width: 1000px ) {
+  .landscape{
+    height: 200px;
+  }
+}
+
+@media( min-width: 1100px ) {
+  .landscape{
+    height: 225px;
+  }
+}
+
+@media( min-width: 1200px ) {
+  .landscape{
+    height: 250px;
+  }
 }
 
 .portrait{
   object-fit: cover;
   /*width: 250px;*/
-  height: 444px;
+  height: 400px;
 }
 
 .margin_auto{
-  margin:auto;
+  margin: auto !important;
 }
 
 .overlay {
