--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -68,6 +68,7 @@ a {
   margin-top: 15px;
 }
 
+
 .marging_b_15{
     margin-bottom: 15px !important;
 }
@@ -91,57 +92,14 @@ a {
     /*width: 100% !important;*/
 }
 
+.portrait.margin_l_25{
+  margin-left: 25% !important;
+}
+
 .landscape{
-  object-fit: cover;
-  width: 75%;
-  /*height: 250px;*/
-  /*margin-left: 1px;*/
+
 }
 
-@media( min-width: 600px ) {
-  /*.landscape{
-    height: 100px;
-  }*/
-}
-
-@media( min-width: 800px ) {
-  .landscape{
-    height: 150px;
-  }
-}
-
-@media( min-width: 900px ) {
-  .landscape{
-    height: 175px;
-  }
-}
-
-@media( min-width: 1000px ) {
-  .landscape{
-    height: 200px;
-  }
-}
-
-@media( min-width: 1100px ) {
-  .landscape{
-    height: 225px;
-  }
-}
-
-@media( min-width: 1200px ) {
-  .landscape{
-    height: 250px;
-  }
-}
-
-
-.portrait{
-  object-fit: cover;
-  /*width: 250px;*/
-  height: 400px;
-  display: block;
-    margin: 0 auto;
-}
 
 .margin_auto{
   margin: auto !important;
