Got somewhere with angular-masonry

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,10 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     <!-- Dependencies -->
+    <script
+          src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+          integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
+          crossorigin="anonymous"></script>
     <script type="text/javascript" src="/angular/angular.js"></script>
     <script type="text/javascript" src="/angular-animate/angular-animate.js"></script>
     <script type="text/javascript" src="/angular-aria/angular-aria.js"></script>
@@ -21,6 +25,9 @@
     <script type="text/javascript" src="/@uirouter/angularjs/release/angular-ui-router.min.js"></script>
     <script type="text/javascript" src="/ng-alertify/dist/ng-alertify.js"></script>
     <script type="text/javascript" src="/angular-loading-bar/build/loading-bar.min.js"></script>
+    <script type="text/javascript" src="/imagesloaded/imagesloaded.pkgd.min.js"></script>
+    <script type="text/javascript" src="/masonry-layout/dist/masonry.pkgd.min.js"></script>
+    <script type="text/javascript" src="/angular-masonry/angular-masonry.min.js"></script>
 
 
     <!-- Angular app stuff -->
