--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -165,3 +165,12 @@ a {
     object-fit: cover;
     object-position: 50% 50%;
 }
+
+.masonry-brick { 
+    width: 25%; 
+    /*margin: 0.1em;*/
+}
+
+.masonry-brick img { 
+    width:100%; 
+}
