--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,11 +1,11 @@
 html{
-  background-color: #F0F0F0; 
+  background-color: #FFF; 
 }
 
 body {
   padding: 50px;
   font-family: 'Roboto', sans-serif;;
-  background-color: #F0F0F0; 
+  background-color: #FFF; 
 }
 
 *, *:after, *:before {
