Change background on admin page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,7 +6,7 @@ body {
   padding: 50px;
   /*font-family: 'Roboto', sans-serif;*/
   font-family: 'PT Sans', sans-serif;
-  /*background-color: #FFF; */
+  background-color: #FFF; 
 }
 
 *, *:after, *:before {
@@ -21,10 +21,6 @@ a {
 
 .background_white{
     background-color: #FFF;
-}
-
-.no_colour{
-  background-color: inherit;
 }
 
 .white_text{
