--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,7 +43,7 @@
     
   </head>
   <body>
-    <div ui-view="nav"></div>
+    <div ui-view="nav" class="background_white"></div>
     <div ui-view="body"></div>
   </body>
 </html>
