--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -207,6 +207,10 @@ a {
   transform: translateY(5px);
 }
 
+.transtlate_y_11{
+  transform: translateY(11px);
+}
+
 .object_fit_cover{
     object-fit: cover;
     object-position: 50% 50%;
