--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -203,13 +203,13 @@ a {
   background-color: rgba(0, 0, 0, 0.6);
 }
 
-.transtlate_y_5{
+/*.transtlate_y_5{
   transform: translateY(5px);
 }
 
 .transtlate_y_11{
   transform: translateY(11px);
-}
+}*/
 
 .object_fit_cover{
     object-fit: cover;
