--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,9 +16,15 @@
       rel="stylesheet">
     <!-- Dependencies -->
     <script
+        type="text/javascript"
+        async defer
+        src="//assets.pinterest.com/js/pinit.js"
+    ></script>
+    <script
           src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
           integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g="
-          crossorigin="anonymous"></script>
+          crossorigin="anonymous">              
+    </script>
     <script type="text/javascript" src="/angular/angular.js"></script>
     <script type="text/javascript" src="/angular-animate/angular-animate.js"></script>
     <script type="text/javascript" src="/angular-aria/angular-aria.js"></script>
