--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,7 +6,7 @@ body {
   padding: 50px;
   /*font-family: 'Roboto', sans-serif;*/
   font-family: 'PT Sans', sans-serif;
-  background-color: #FFF; 
+  /*background-color: #FFF; */
 }
 
 *, *:after, *:before {
@@ -300,4 +300,9 @@ a {
 
 .masonry-brick{
   margin-bottom: 25px !important;
+}
+
+
+.big_icon{
+    font-size: 4em !important;
 }
