--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -124,6 +124,10 @@ a {
   margin-top: 15px;
 }
 
+.margin_t_30{
+  margin-top: 30px;
+}
+
 .red_border{
   border: 2px solid red !important; 
   padding: 10px !important; 
