--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -124,8 +124,8 @@ a {
   margin-top: 15px;
 }
 
-.margin_t_30{
-  margin-top: 30px;
+.margin_t_120{
+  margin-top: 120px !important;
 }
 
 .red_border{
