--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -124,12 +124,29 @@ a {
   max-width: 100% !important;
 }
 
+.height_100vh{
+    height: h
+}
+
+.max_height_100vh{
+    max-height: 100vh;
+}
+
 .width_100_vw{
     width: 100vw;
+    max-width: 100vw;
 }
 
 .width_100{
     width: 100% !important;
+}
+
+.max_width_95{
+    max-width: 95vw !important;
+}
+
+.max_height{
+    max-height: 95% !important;
 }
 
 .margin_t_15{
