--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="portfolio">
   <head>
+    <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "DTD/xhtml1-strict.dtd">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
@@ -49,6 +50,8 @@
     <script type="text/javascript" src="/imagesloaded/imagesloaded.pkgd.min.js"></script>
     <script type="text/javascript" src="/masonry-layout/dist/masonry.pkgd.min.js"></script>
     <script type="text/javascript" src="/angular-masonry/angular-masonry.min.js"></script>
+    <script type="text/javascript" src="/fancybox-plus/dist/jquery.fancybox-plus.min.js"></script>
+    <script type="text/javascript" src="/angular-fancybox-plus/js/angular-fancybox-plus.js"></script>
 
 
     <!-- Angular app stuff -->
