--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -106,6 +106,10 @@ a {
   padding: 0px !important;
 }
 
+.width_100{
+    width: 100% !important;
+}
+
 .width_50 {
   width: 50% !important; 
 }
@@ -379,7 +383,7 @@ a {
 
 
 .wrap {
-    height: 100%;
+    /*height: 100%;*/
     display: inline-block;
     position: relative;
 }
@@ -391,5 +395,5 @@ a {
 }
 
 .display_image{ 
-    max-height: 100%;
+    /*max-width: 100%;*/
  }
