--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -394,7 +394,9 @@ a {
     left: 0;
 }
 
-
+.transparent{
+    background-color: rgba( 0,0,0, .1 );
+}
 
 
  @media screen and (orientation: portrait) {
