--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -358,7 +358,7 @@ a {
 /*Try out parallax*/
 .parallax{
     background-image: url('https://s3.eu-west-1.amazonaws.com/als-portfolio/38/IMG_5207-01.jpeg');
-    /*width: 100vw !important;*/
+    width: 100vw !important;
     /*background: url('http://placekitten.com/g/600/350');*/
     position: fixed;
     left: 0;
