--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     <title>Alan Rowell Photography Portfolio</title>
-    <link href="https://fonts.googleapis.com/css?family=PT+Sans|Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans|Roboto|Open+Sans+Condensed:300" rel="stylesheet">
     <link rel="shortcut icon" href="">
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel='stylesheet' href='/angular-material/angular-material.css' />
