--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,8 +64,42 @@
   <body>
     
     <div ui-view="nav" class="background_white"></div>
-    <div ui-view="body"></div>
+    <div ui-view="body" style="min-height: 80%"></div>
+    <div class="footer">
+        <div class="height_85 center_text  width_100 dark_grey" style="cursor: pointer;" layout="column" layout-align="center center">
+            <div layout="row" layout-align="center center" class="padding_t_10">
+                <div>
+                    <a ng-href="https://www.pinterest.com/pin/create/button/" 
+                        data-pin-do="buttonBookmark" 
+                        data-pin-tall="true"
+                        data-pin-custom="true"
 
+                        >
+                        <img style="width:35px;"  src="https://s3.eu-west-1.amazonaws.com/als-portfolio/static/pinterest-icon-black-and-white.png">
+                            
+                    </a>
+                </div>
+
+                <div>
+                    <a href="#" ng-click="fb_share()">
+                        <img style="width:35px;" src="https://s3.eu-west-1.amazonaws.com/als-portfolio/static/black_fb_share.jpg?">
+                    </a>
+                </div>
+
+                <div>
+                    <a href="mailto:alan.rowell28@googlemail.com"><img style="height:35px" src="https://s3.eu-west-1.amazonaws.com/als-portfolio/static/email.png"></a>
+                </div>
+            </div>
+
+            <div>
+                <md-button ui-sref="contact">
+                    Contact
+                </md-button>
+            </div>
+            
+
+        </div>
+    </div>
 
   </body>
 </html>
