--- a/views/index.ejs
+++ b/views/index.ejs
@@ -99,7 +99,15 @@
             
 
         </div>
-    </div>
-
+    </div> <!-- end of footer -->
+    <script type="text/javascript">
+        (function(d){
+            var f = d.getElementsByTagName('SCRIPT')[0], p = d.createElement('SCRIPT');
+            p.type = 'text/javascript';
+            p.async = true;
+            p.src = 'https://assets.pinterest.com/js/pinit.js';
+            f.parentNode.insertBefore(p, f);
+        }(document));
+    </script>
   </body>
 </html>
