--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,7 +64,7 @@
   <body>
     
     <div ui-view="nav" class="background_white"></div>
-    <div ui-view="body" style="min-height: 81%"></div>
+    <div ui-view="body" ></div>
     <div class="footer">
         <div class="height_85 center_text  width_100 dark_grey" style="cursor: pointer;" layout="column" layout-align="center center">
             <div layout="row" layout-align="center center" class="padding_t_10">
