--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -464,3 +464,15 @@ a {
 .pointer{
     cursor: pointer;
 }
+
+.fancy{
+    border: 4px solid rgba( 137,189,211,.5 );
+    -webkit-box-shadow: inset 0 0 20px #000;
+   -moz-box-shadow: inset 0 0 20px #000;
+    -ms-box-shadow: inset 0 0 20px #000;
+    box-shadow: inset 0 0 20px #000;
+    -webkit-border-radius: 10px;
+   -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    border-radius: 10px;
+}
