--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -466,7 +466,7 @@ a {
 }
 
 .fancy{
-    border: 4px solid rgba( 137,189,211,.5 );
+    border: 6px solid rgba( 137,189,211,1 );
     -webkit-box-shadow: inset 0 0 20px #000;
    -moz-box-shadow: inset 0 0 20px #000;
     -ms-box-shadow: inset 0 0 20px #000;
@@ -475,4 +475,10 @@ a {
    -moz-border-radius: 10px;
     -ms-border-radius: 10px;
     border-radius: 10px;
+}
+
+.small_fancy{
+    border: 4px solid rgba( 137,189,211,.5 );
+    height: 40px;
+    width: 20px;
 }
