--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -146,13 +146,13 @@ a {
 
 .md-dialog{
     overflow: hidden !important;
-    overflow-x: hidden;
+    /*overflow-x: hidden;*/
     overflow-y: hidden;
 }
 
 .no_scroll{
     overflow: hidden !important;
-    overflow-x: hidden;
+    /*overflow-x: hidden;*/
     overflow-y: hidden;
 }
 .width_100_vw{
@@ -442,7 +442,7 @@ a {
         max-width: 100%;
         /*height: 100%;*/
         max-height: 100%;
-        overflow: hidden;
+        /*overflow: hidden;*/
     }
 }
 
@@ -454,7 +454,7 @@ a {
        min-width: 0px !important;
        max-width: 100%;
        
-       overflow: hidden;
+       /*overflow: hidden;*/
     }
 }
 
