--- a/views/index.ejs
+++ b/views/index.ejs
@@ -99,6 +99,9 @@
                     Contact
                 </md-button>
             </div>
+            <div class="margin_b_10">
+                Designed by <a href="mailto:louisangelini@gmail.com">Louis Angelini</a>
+            </div>
             
 
         </div>
