Change font color

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -99,8 +99,8 @@
                     Contact
                 </md-button>
             </div>
-            <div class="margin_b_10">
-                Designed by <a href="mailto:louisangelini@gmail.com">Louis Angelini</a>
+            <div class="margin_b_10 ">
+                Designed by <a class=" stand_font_color" href="mailto:louisangelini@gmail.com">Louis Angelini</a>
             </div>
             
 
