--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -203,6 +203,14 @@ a {
     margin-bottom: 10px !important;
 }
 
+.no_decoration{
+    text-decoration-line: none !important;
+}
+
+.stand_font_color{
+    color: rgba(0,0,0,0.87);
+}
+
 .move_down{
     margin-top: 88px;
 }
