--- a/views/index.ejs
+++ b/views/index.ejs
@@ -100,7 +100,7 @@
                 </md-button>
             </div>
             <div class="margin_b_10 ">
-                Designed by <a class=" stand_font_color" href="mailto:louisangelini@gmail.com">Louis Angelini</a>
+                Web: <a class=" stand_font_color no_decoration" href="mailto:louisangelini@gmail.com">Louis Angelini Development</a>
             </div>
             
 
