--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html ng-app="portfolio">
   <head>
+
+    <meta property="og:url"             content="alanrowell.com"/>
+    <meta property="og:type"            content="website"/>
+    <meta property="og:description"     content=""/>
+    <meta property="og:image"           content="https://s3-eu-west-1.amazonaws.com/als-portfolio/9/IMG_20170430_120348_883-01.jpeg"/>
+
     <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "DTD/xhtml1-strict.dtd">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
