--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,8 @@
 <html ng-app="portfolio">
   <head>
 
-    <meta property="og:url"             content="alanrowell.com"/>
+    <meta property="og:url"             content="https//www.alanrowell.com"/>
+    <meta property="og:title"           content="Alan Rowell Photography">             
     <meta property="og:type"            content="website"/>
     <meta property="og:description"     content=""/>
     <meta property="og:image"           content="https://s3-eu-west-1.amazonaws.com/als-portfolio/9/IMG_20170430_120348_883-01.jpeg"/>
