--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,7 @@
 <html ng-app="portfolio">
   <head>
 
+    <meta property="fb:app_id"          content="1771176279582399"> 
     <meta property="og:url"             content="https//www.alanrowell.com"/>
     <meta property="og:title"           content="Alan Rowell Photography">             
     <meta property="og:type"            content="website"/>
