--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
   <head>
 
     <meta property="fb:app_id"          content="1771176279582399"> 
-    <meta property="og:url"             content="https//www.alanrowell.com"/>
+    <meta property="og:url"             content="https://www.alanrowell.com"/>
     <meta property="og:title"           content="Alan Rowell Photography">             
     <meta property="og:type"            content="website"/>
     <meta property="og:description"     content=""/>
