--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
     <meta property="og:title"           content="Alan Rowell Photography">             
     <meta property="og:type"            content="website"/>
     <meta property="og:description"     content=""/>
-    <meta property="og:image"           content="https://s3.eu-west-1.amazonaws.com/als-portfolio/15/fb_share.jpeg"/>
+    <meta property="og:image"           content="https://s3-eu-west-1.amazonaws.com/als-portfolio/9/fb_share1.jpeg"/>
 
     <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "DTD/xhtml1-strict.dtd">
     <meta name="viewport" content="width=device-width, initial-scale=1">
