--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -24,8 +24,7 @@ a {
 }
 
 .md-dialog-container{
-    opacity: .85 !important;
-    background-color: #FFF !important;
+    background-color: rgba( 255,255,255, 0.85 );
 }
 
 .background_white{
