--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -24,7 +24,7 @@ a {
 }
 
 .md-dialog-container{
-    background-color: rgba( 255,255,255, 0.85 );
+    background-color: rgba( 255,255,255 );
 }
 
 .background_white{
