Selecting subcat and getting all cats imges

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -506,3 +506,15 @@ a {
 .white_placeholder::placeholder {
     color: #FFF !important;
 }
+
+.fade_nice{
+  animation: fadein .3s;
+}
+@keyframes fadein {
+  from {
+      opacity:0;
+  }
+  to {
+      opacity:1;
+  }
+}
